# lgdo-arrow

./: pyproject.toml
src/lgdo_arrow/: __init__.py  convert.py
tests/: test_convert.py
