[project]
name = "lgdo-arrow"
version = "0.1.0"
description = "Zero-copy conversion between LGDO and Arrow"
requires-python = ">=3.10"
dependencies = [
    "legend-pydataobj>=1.0.0",
    "pyarrow>=14.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lgdo_arrow"]
